# nuget_scanner

./: .gitignore  Cargo.toml  DEMO_LICENSE_REPORT.md  README.md
src/: cli.rs  main.rs
src/models/: catalog_entry.rs  mod.rs  package_info.rs  project_info.rs
src/reports/: generate_console_report.rs  generate_markdown_report.rs  mod.rs
src/services/: convert_and_map_packages.rs  extract_packages.rs  fetch_package_details.rs  find_package_files.rs  mod.rs  process_projects_data.rs
src/utils/: mod.rs  parse_configs.rs
