[package]
name = "nuget-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
flate2 = "1.0.30"
clap = { version = "4.5.7", features = ["derive"] }
walkdir = "2.5.0"
semver = "1.0.23"
colored = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
